# fastx-toolkit

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
fastx-toolkit/: CMakeLists.txt
fastx-toolkit/fastq-to-fasta/: CMakeLists.txt  fastq-to-fasta.cpp
fastx-toolkit/fastx-qual-stats/: CMakeLists.txt  fastx-qual-stats.cpp
fastx-toolkit/fastx-qual-stats-cuda/: CMakeLists.txt  fastx-qual-stats.cu
fastx-toolkit/fastx-qual-stats-omp/: CMakeLists.txt  fastx-qual-stats-omp.cpp
fastx-toolkit/fastx-samp-gen/: CMakeLists.txt  fastx-samp-gen.cpp
fastx-toolkit/fmt/include/fmt/: base.h
fastx-toolkit/libfastx/: CMakeLists.txt  args.hxx  fastx.cpp  fastx.hpp
fastx-toolkit/refs/: thrust.txt
fastx-toolkit/tests/: measure-performance.py  new-vs-omp.txt  old-vs-buffering.txt  performance-comparator.py  plotter.py  table.md
